# proteomics-rs

./: .gitignore  Cargo.toml  README.md  get_psms_from_proline_22-04-07.r  heatmap_generation_22-04-07.R  scatter_plot_generation_fixed_multiple_phosphate_14-04-22.r  scatter_plot_generation_fixed_multiple_phosphate_19-04-22_selecting_max_value.r
data/: get_psms_from_proline_22-04-07.r  scatter_plot_generation_fixed_multiple_phosphate_14-04-22.r
data/benchmarks/: get_psms_from_proline_22-04-07.r
src/: main.rs  phospho_test.rs
src/chemistry/: composition.rs  constants.rs  mass_calc.rs  mod.rs  model.rs  table.rs
src/io/: fasta.rs  mgf.rs  mod.rs  reader.rs
src/ms/: utils.rs
src/msms/: annotator.rs  fragmentation.rs  io.rs  mod.rs  model.rs
