[package]
name = "proteomics-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#chemical_elements = "0.2.0"

[dependencies]
anyhow = "1.0.40"
itertools = "0.10.3"
lazy_static = "1.4.0"
mzdata = "0.5.0"
rstar = "0.9.2"