[package]
name = "proteomics-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#chemical_elements = "0.2.0"

[dependencies]
anyhow = "1.0.40"
bincode = "1.3.3"
csv = "1.1.6"
fast-float = "0.2.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
#libm = "0.2.1"
#mzdata = "0.5.0"
regex = "1.5.4"
rstar = { version = "0.9.2", features = ["serde"] }
serde = { version = "1.0.133", features = ["derive"] }
tailcall = "0.1.6"
ux = "< 0.1.4" # 0.1.4 fails on old rustc (https://github.com/rust-lang/rust/issues/51999, https://github.com/kjetilkjeka/uX/pull/39)